--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_maps_flutter: ^2.5.1
   location: ^5.0.3
   permission_handler: ^11.1.0
+  device_info_plus: ^9.1.1
+  firebase_core: ^2.24.2
+  firebase_database: ^10.4.0
 
 dev_dependencies:
   flutter_test:
