--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   device_info_plus: ^9.1.1
   firebase_core: ^2.24.2
   firebase_database: ^10.4.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
